--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Lucas Velvis <lucasvelvis@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11, <3.12"
 pandas = "^2.2.1"
 matplotlib = "^3.8.3"
-pabutools = "^1.1.5"
+pabutools = "^1.1.6"
+mip = "^1.16rc0"
 
 
 [tool.poetry.group.dev.dependencies]
